fix(#3): fix list wrap

--- a/src/ui-kit/select/option/option.module.css
+++ b/src/ui-kit/select/option/option.module.css
@@ -1,4 +1,4 @@
 .option {
-  white-space: nowrap;
+  text-wrap: balance;
   margin-block-end: 16px;
 }
